Shifting to query parameter in vendor registration
