# docs/swagger.json
@@ -249,19 +249,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/MITI_ART_src_Kibamba_dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/MITI_ART_src_Kibamba_dto.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/MITI_ART_src_Kibamba_dto.ErrorResponse"
                         }
                     }
                 }
@@ -915,7 +915,7 @@
         },
         "/vendor/register": {
             "post": {
-                "description": "Vendor registration using token and additional details",
+                "description": "Vendor registration using token in query and form details in body",
                 "consumes": [
                     "application/json"
                 ],
@@ -929,9 +929,9 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
+                        "description": "Invitation token sent via email",
+                        "name": "token",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -948,37 +948,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/dto.RegisterResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/MITI_ART_src_Vendors_dto.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/MITI_ART_src_Vendors_dto.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/MITI_ART_src_Vendors_dto.ErrorResponse"
                         }
                     }
                 }
@@ -1186,6 +1174,23 @@
         }
     },
     "definitions": {
+        "MITI_ART_src_Kibamba_dto.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Invalid request data!"
+                }
+            }
+        },
+        "MITI_ART_src_Vendors_dto.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ClientRegisterRequest": {
             "type": "object",
             "required": [
@@ -1241,15 +1246,6 @@
                 },
                 "price": {
                     "type": "number"
-                }
-            }
-        },
-        "dto.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Invalid request data!"
                 }
             }
         },
@@ -1338,6 +1334,17 @@
                 },
                 "price": {
                     "type": "number"
+                }
+            }
+        },
+        "dto.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "vendorEmail": {
+                    "type": "string"
                 }
             }
         },
